# testflow-dsl

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
docs/: 01_project_concept.md  02_testflow_dsl_language_spec.md  03_architecture_nodeeditor_jsondsl_backend.md  04_roadmap.md  05_backend_strategy.md  06_migration_from_testcase_json.md  07_ir_specification.md  08_validation_strategy.md  09_core_design.md  10_editor_mvp_requirements.md  11_editor_spike_evaluation.md
docs/adr/: ADR-001-adopt-testflow-dsl-nodeeditor-multibackend.md
editor/cpp/: .gitignore  CMakeLists.txt  README.md
editor/cpp/src/: app.cpp  app.h  dsl_loader.cpp  dsl_loader.h  dsl_model.h  dsl_saver.cpp  dsl_saver.h  graph_view.cpp  graph_view.h  main.cpp  property_panel.cpp  property_panel.h  validator_runner.cpp  validator_runner.h
editor/tauri/: README.md  index.html  package.json  vite.config.ts
editor/tauri/src/: App.tsx
editor/tauri/src-tauri/: Cargo.toml  tauri.conf.json
editor/tauri/src-tauri/src/: lib.rs  main.rs
editor/tauri/src/components/: GraphView.tsx  MenuBar.tsx  PropertyPanel.tsx  ValidationPanel.tsx
editor/tauri/src/components/nodes/: BlockNode.tsx  EndNode.tsx  StartNode.tsx
editor/tauri/src/store/: dslStore.ts
editor/tauri/src/types/: dsl.ts
examples/: simple_speed_flow.json
schemas/: testflow-dsl.schema.json
scripts/: validate_testflow.py
src/backends/: README.md
src/backends/python_runtime/: __init__.py  backend.py  capabilities.py  clock.py  condition_eval.py  executor.py  result_log.py  signal_store.py
src/core/: README.md
src/core/ir/: __init__.py  models.py
src/core/parser/: __init__.py  dsl_parser.py
src/core/semantic_validator/: __init__.py  validator.py
src/core/type_checker/: __init__.py  checker.py
tests/backends/: test_python_runtime.py
tests/core/: test_parser.py  test_semantic_validator.py  test_type_checker.py
